chore: 설정 파일 추가
- actions.yml
- Dockerfile
- application.yml db 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,14 @@ spring:
     name: player
   webflux:
     base-path: /player
+  data:
+    mongodb:
+      host: mongo-player
+      port: 27017
+      username: root
+      password: ${DB_PASSWORD}
+      database: admin
+      authentication-database: admin
 
 server:
   port: 8020
