--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -40,7 +40,7 @@ jobs:
           fi
           echo TAG = $TAG
           
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO_Player }}:$TAG .
+          docker build --build-arg DB_PASSWORD=${{ secrets.DB_PASSWORD }} -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO_Player }}:$TAG .
           docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO_Player }}:$TAG
           kubectl rollout restart deployment/orca-player -n $TAG
           kubectl rollout status deployment/orca-player -n $TAG
