fix: application.yml
- external service properties 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,15 @@ spring:
       ack-mode: manual_immediate
 server:
   port: 8020
+
+external:
+  services:
+    auth:
+      host: orca-auth
+      port: 8010
+    club:
+      host: orca-club
+      port: 8030
+    match:
+      host: orca-match
+      port: 8040
